# bact-analysis-bessyii

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
bact_analysis_bessyii/: __init__.py
bact_analysis_bessyii/bba/: __init__.py  analysis_model.py  app.py  app_data.py  bba.py  bessyii_twiss_thor_scsi.nc  bessyii_twiss_thor_scsi_from_twin.nc  bessyii_twiss_thor_scsi_twin.nc  bpm_repo.py  calc.py  measurement_data_model.py  peters_bpms.py  preprocess_data.py
bact_analysis_bessyii/business_logic/: __init__.py  calc.py  calc_both_planes.py  obsolete.py
bact_analysis_bessyii/interfaces/: __init__.py  calculation_model.py  device_location.py  element_families.py  geographic_information_system.py  name_index_mapping.py  space_mapping.py  standard_naming.py
bact_analysis_bessyii/model/: accelerator_model.py  analysis_model.py  analysis_util.py  calc.py  calc_both_planes.py  orbit_prediciton.py  planes.py  twiss.py
bact_analysis_bessyii/orm/: app.py  fit.py  model.py  plot.py  plot_matplotlib.py  plot_pyvista.py  prepare_plotdata.py  preprocess_data.py
bact_analysis_bessyii/scripts/: bba.py  offsets_de2c658c-6327-4c85-99d6-141a2a36a562.nc  (+3 more)
examples/: bba.py  bba_result_inspect.py
notebooks/: analysis_bba_data.ipynb  bba_analysis.ipynb  bba_analysis_tunes.ipynb  bba_analysis_tunes.py  comparing_bba_data.ipynb  inspect_catalog.ipynb  quadrupole_calibration_factors_from_at.ipynb  sextupole_response.ipynb  sextupole_response.py  tune_test.ipynb  twin_twiss_to_netcdf.ipynb
tests/: bba_test.py
(+17 files in other folders)
