# -*- coding: utf-8 -*-

[metadata]
name = bact-analysis-bessyii
fullname = BACT accelerator optimisation analysis tools: BESSY II specific part
version = 0.0.0
url = https://github.com/hz-b/bact-analysis/
author = Pierre Schnizer
author_email = pierre.schnizer@helmholtz-berlin.de
license = GPL
description = Berlin accelerator comissioning tools
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:


[build-system]
requires = setup_tools
